[package]
name = "shaken_brain"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
alto_logger = "0.3.7"
anyhow      = "1.0.32"
log         = "0.4.11"
rand        = { version = "0.7.3", features = ["small_rng"] }
serde       = { version = "1.0.116", features = ["derive"] }
serde_json  = "1.0.57"
tiny_http   = "0.7.0"

markov      = { git = "git://github.com/museun/markov", rev = "fe2939888a58b98342f810a5f41fbfa1e384b0c5" }
