[package]
name = "shaken_brain"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
alto_logger = "0.3.7"
anyhow      = "1.0.33"
fastrand    = "1.4.0"
log         = "0.4.11"
serde       = { version = "1.0.117", features = ["derive"] }
serde_json  = "1.0.59"
tiny_http   = "0.7.0"

markov      = { git = "https://github.com/museun/markov", rev = "b2d7f9f4487498c060ab8057f0c1828e2899f212" }
