[package]
name        = "still_shaken"
version     = "0.1.0"
authors     = ["museun <museun@outlook.com>"]
edition     = "2018"
default-run = "still_shaken"

[dependencies]
alto_logger      = "0.3.7"
anyhow           = "1.0.32"
async-channel    = "1.4.2"
async-ctrlc      = "1.2.0"
async-executor   = "0.2.1"
async-io         = "0.2.7"
attohttpc        = { version = "0.15.0", default-features = false, features = ["json", "tls-rustls"] }
blocking         = "0.6.1"
fastrand         = "1.3.5"
futures-lite     = "1.0.0"
log              = "0.4.11"
pin-project-lite = "0.1.7"
serde            = { version = "1.0.115", features = ["derive"] }
serde_json       = "1.0.57"
simple_env_load  = "0.1.0"
toml             = { version = "0.5.6", features = ["preserve_order"] }
twitchchat       = { version = "0.12.4", features = ["async-io", "async-tls"] }
