[package]
name        = "still_shaken"
version     = "0.1.0"
authors     = ["museun <museun@outlook.com>"]
edition     = "2018"
default-run = "still_shaken"

[dependencies]
shaken_template = { path = "../shaken_template" }
shaken_commands = { path = "../shaken_commands" }

alto_logger      = "0.3.7"
anyhow           = "1.0.32"
async-channel    = "1.4.2"
async-ctrlc      = "1.2.0"
async-executor   = "1.3.0"
async-io         = "1.1.2"
async-mutex      = "1.3.0"
attohttpc        = { version = "0.15.0", default-features = false, features = ["json", "tls-rustls"] }
blocking         = "1.0.0"
fastrand         = "1.3.5"
futures-lite     = "1.7.0"
log              = "0.4.11"
pin-project-lite = "0.1.7"
serde            = { version = "1.0.116", features = ["derive"] }
serde_json       = "1.0.57"
simple_env_load  = "0.1.0"
toml             = { version = "0.5.6", features = ["preserve_order"] }
twitchchat       = { version = "0.13.2", features = ["async-io", "async-tls", "async"] }
mock_instant = "0.1.1"

[dev-dependencies]
tempfile = "3.1.0"

