[package]
name        = "still_shaken"
version     = "0.1.0"
authors     = ["museun <museun@outlook.com>"]
edition     = "2018"
default-run = "still_shaken"

[dependencies]
shaken_template = { path = "../shaken_template" }
shaken_commands = { path = "../shaken_commands" }

alto_logger      = "0.3.7"
anyhow           = "1.0.33"
async-channel    = "1.5.1"
async-ctrlc      = "1.2.0"
async-executor   = "1.3.0"
async-io         = "1.1.10"
async-mutex      = "1.4.0"
attohttpc        = { version = "0.16.0", default-features = false, features = ["json", "tls-rustls"] }
blocking         = "1.0.2"
fastrand         = "1.4.0"
futures-lite     = "1.11.2"
log              = "0.4.11"
pin-project-lite = "0.1.11"
serde            = { version = "1.0.117", features = ["derive"] }
serde_json       = "1.0.59"
simple_env_load  = "0.1.0"
toml             = { version = "0.5.7", features = ["preserve_order"] }
twitchchat       = { version = "0.14.5", features = ["async-io", "async-tls", "async"] }
mock_instant = "0.2.1"

[dev-dependencies]
tempfile = "3.1.0"

